--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,73 @@
     --color-fondo2:#F5F1EE;
     --color-texto2:#1F5148;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: var(--fuente-texto);
+    scroll-behavior: smooth;
+    
+}
+
+/* LOGO */
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo img {
+  height: 40px;
+  width: auto;
+  display: block;
+}
+
+#menu {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background-color: #0f3b2e;
+}
+
+.menu-contenedor {
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 20px 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu-derecha {
+  list-style: none;
+  display: flex;
+  gap: 30px;
+}
+
+.menu-derecha a {
+  font-family: var(--fuente-texto);
+  color: var(--color-texto1);
+  font-size: 0.95rem;
+  text-decoration: none;
+  color: rgba(255,255,255,0.8);
+  position: relative;
+}
+
+.menu-derecha a:hover {
+  color: var(--color-texto1);
+}
+
+.menu-derecha a::after {
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  width: 0;
+  height: 2px;
+  background: var(--color-fondo2);
+  transition: width 0.25s ease;
+}
+
+.menu-derecha a:hover::after {
+  width: 100%;
+}
