pruebas carrusel ciudades y villa

--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ nav#menu img.logo {
 .seccion-verde p::after {
     content: "";
     display: block;
-    width: 400px;     /* Ajusta al gusto */
+    width: 400px;     
     height: 2px; 
     background-color: var(--color-texto1);
     margin: 40px auto 0 auto;
@@ -167,7 +167,7 @@ nav#menu img.logo {
 .seccion-video {
     position: relative;
     width: 100%;
-    height: 75vh; /* Ajusta al gusto */
+    height: 75vh; 
     overflow: hidden;
 }
 
@@ -202,7 +202,7 @@ nav#menu img.logo {
 .naturaleza-texto {
     width: 50%;
     padding: 20px 60px;
-    margin-top: 80px;
+    margin-top: 130px;
     font-weight: 300;
     display: flex;
     flex-direction: column;
@@ -221,30 +221,22 @@ nav#menu img.logo {
 .naturaleza-texto p {
     font-family: var(--fuente-texto);
     font-size: 1rem;
-    line-height: 1.9rem;
-    max-width: 500px;
+    line-height: 1.2rem;
+    max-width: 600px;
     font-weight: 300;
 }
 
-.seccion-verde p::after {
+.seccion-naturaleza p::after {
     content: "";
     display: block;
-    width: 400px;     /* Ajusta al gusto */
+    width: 600px;     
     height: 2px; 
     background-color: var(--color-texto2);
     margin: 40px auto 0 auto;
-    opacity: 0.6;   
+    opacity: 0.8;   
 }
 
-/* ==== SECCIÓN CIUDADES ==== */
-.seccion-ciudades {
-    display: grid;
-    grid-template-columns: 1fr 40vw; /* Texto izquierda, carrusel derecha */
-    width: 100%;
-    min-height: 70vh;
-    background-color: var(--color-fondo2);
-    color: var(--color-texto2);
-}
+
 
 /* ===== SECCIÓN CIUDADES ===== */
 .seccion-ciudades {
@@ -262,45 +254,70 @@ nav#menu img.logo {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-weight: 300;
 }
 
 .ciudades-texto h2 {
     font-family: var(--fuente-titulos);
-    font-size: 3.4rem;
+    font-size: 4rem;
     font-weight: 200;
     margin-bottom: 25px;
+    
 }
 
-/* ===== CONTENEDOR DEL CARRUSEL ===== */
+.ciudades-texto p {
+    width: 650px;
+
+}
+
+/* === CARRUSEL CIUDADES === */
 .carrusel-ciudades {
-    width: 40vw;
-    overflow-x: auto;
-    overflow-y: hidden;
-    scroll-snap-type: x mandatory;
+    width: 100%;
+    overflow: hidden;
     display: flex;
-    justify-content: flex-end;
-    scrollbar-width: none; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0;
 }
 
-.carrusel-ciudades::-webkit-scrollbar {
-    display: none;
-}
-
-/* ===== CARRUSEL (ANTES "track") ===== */
 .carrusel {
     display: flex;
-    gap: 20px;
-    padding-right: 20px;
+    transition: transform 0.4s ease-in-out;
 }
 
-/* ===== IMÁGENES ===== */
+/* Tamaño estable */
 .carrusel img {
-    width: 18vw;           
-    height: 100%;
+    width: 350px;
+    height: 230px;
     object-fit: cover;
-    scroll-snap-align: start;
-    border-radius: 8px;
-    flex-shrink: 0;        
+    
+    margin-right: 25px;
 }
 
+/* Puntos */
+.puntos {
+    margin-top: 20px;
+    text-align: center;
+    z-index: 100;
+}
 
+.puntos span {
+    height: 14px;
+    width: 14px;
+    background-color: var(--color-fondo2);
+    margin: 6px;
+    display: inline-block;
+    border-radius:100% ;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.puntos span:hover {
+    transform: scale(1.25);
+}
+
+.puntos .activo {
+    background-color: var(--color-texto2);
+    transform: scale(1.35);
+}
